# FluidsynthDemo

./: CMakeLists.txt  README.md  fre_table.h  midi.h  midi2h.cpp  midi2h_test.cpp  midiplayer.cpp  music.h  mymidiplayer.cpp
assets/midi/: SuperMario.mid  quanyecha.mid
lib/fluidsynth/: fluidsynth.h
lib/midifile/: CMakeLists.txt
